# FinalYearProject

./: .dockerignore  .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  app.py  package.json  pyproject.toml  requirements.txt
artifacts/bert_fake_news_large/: model.safetensors  training_summary.json
backend/: .env.example  package-lock.json  package.json  server.js
backend/models/: Analysis.js
backend/services/: pythonBridge.js
data/: sample_fake_news.csv  synthetic_fake_news_large.csv
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.js  styles.css
scripts/: api_predict.py  generate_synthetic_dataset.py
src/fake_news_xai/: __init__.py  data.py  explain.py  inference.py  train.py  utils.py
